2014-06-13  Sergio Martin <sergio.martin@artica.es>

	* extensions/realtime_graphs.php
	extensions/realtime_graphs/realtime_graphs.js: Fix timezone
	differences in realtime graphs when client (browser) and
	server (console instance host) have different timezone.
	Now it takes always the server timezone.
	Ticket: #853

2014-06-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Add doc info to pagerduty
	webhook option

2014-06-13  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/agentes/module_manager_editor_plugin.php,
	  include/javascript/pandora_modules.js: Fixed an error
	that created duplicated macro fields when selecting
	a local component module #927.
	
	* include/graphs/flot/pandora.flot.js: Now the spacing
	of the vertical data description is automatic.

	* include/styles/pandora_black.css: Visual changes.

2014-06-13  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.editor.js
	include/graphs/fgraph.php
	include/graphs/functions_pchart.php
	include/graphs/pChart/pImage.class.php
	include/functions_visual_map.php
	include/ajax/visual_console_builder.ajax.php
	include/functions_visual_map_editor.php
	include/functions_custom_graphs.php
	include/functions_graph.php: Added option to cusomize the
	background of the graphs in visual consoles for ticket: #886

2014-06-13  Vanessa Gil <vanessa.gil@artica.es>

	* include/languages/ca.mo
	include/languages/tr.mo
	include/languages/de.mo
	include/languages/ja.mo
	include/languages/pt_BR.mo
	include/languages/ru.mo
	include/languages/el.mo
	include/languages/nl.mo
	include/languages/es.po
	include/languages/pl.mo
	include/languages/it.mo
	include/languages/pt.mo
	include/languages/index.pot
	include/languages/zh_CN.mo
	include/languages/cs.mo
	include/languages/es.mo
	include/languages/en_GB.mo
	include/languages/sk.mo
	include/languages/en.mo
	include/languages/ar.mo
	include/languages/fr.mo: Update languages.
